[feat] Upgrade Gradle to 7.5, upgrade JDK to 17, upgrade Springboot to 3.3.5